# medconsensus

./: .gitignore  README.md  pyproject.toml
examples/: demo_case_copd_pneumonia.json  demo_case_heart_failure.json  demo_case_pe_mimic.json
medconsensus/: __init__.py  agents.py  app.py  demo.py  llm.py  orchestrator.py  renderer.py  schemas.py
medconsensus.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_api.py  test_llm_flow.py
